--- a/DesktopApplication/Views/MainWindow.xaml
+++ b/DesktopApplication/Views/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="DesktopApplication.MainWindow"
+﻿<Window x:Class="DesktopApplication.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,7 +6,13 @@
         xmlns:local="clr-namespace:DesktopApplication"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
-            
-    </Grid>
+    <StackPanel>
+        <TextBox Width="300" Text="{Binding Input}" />
+        <TextBlock Text="{Binding Output}"
+                   Width="100"
+                   TextWrapping="WrapWithOverflow"/>
+        <Button Command="{Binding ClickCommand}" Content="Process" />
+
+
+    </StackPanel>
 </Window>
