--- a/GuiApplication/Views/Pages/SavesPage.xaml
+++ b/GuiApplication/Views/Pages/SavesPage.xaml
@@ -9,47 +9,68 @@
 
     <Page.Resources>
         <converter:StateConverter x:Key="StateConverter" />
+
     </Page.Resources>
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-
-
-        
-
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
         </Grid.RowDefinitions>
+        <StackPanel Grid.Row="1" Grid.Column="1">
+            <InfoBar Name="SaveInfoBar" Margin="0,0,20,20" />
+        </StackPanel>
+        <StackPanel Grid.Row="2" Orientation="Horizontal">
+            <Button Content="{Binding ElementName=savesPage, Path=ButtonCreateSaveTextBlock}" Click="CreateSave_OpenDialog">
+                <Button.Resources>
+                    <ResourceDictionary>
+                        <ResourceDictionary.ThemeDictionaries>
+                            <ResourceDictionary x:Key="Light">
+                                <SolidColorBrush x:Key="ButtonBackground" Color="#27ae60"/>
+                                <SolidColorBrush x:Key="ButtonBackgroundPointerOver" Color="#2bb865"/>
+                                <SolidColorBrush x:Key="ButtonForeground" Color="White"/>
+                                <SolidColorBrush x:Key="ButtonForegroundPointerOver" Color="White"/>
+                            </ResourceDictionary>
+                        </ResourceDictionary.ThemeDictionaries>
+                    </ResourceDictionary>
+                </Button.Resources>
 
-        <StackPanel Orientation="Horizontal">
+            </Button>
 
-            <Button Content="Create new Save" Click="CreateSave_OpenDialog" />
+            <Button Content="{Binding ElementName=savesPage, Path=ButtonStartAllSavesTextBlock}" Command="{Binding ElementName=savesPage, Path=DataContext.StartAllSavesEvent}" />
+            <Button Content="{Binding ElementName=savesPage, Path=ButtonPauseAllSavesTextBlock}" Command="{Binding ElementName=savesPage, Path=DataContext.PauseAllSavesEvent}" />
+            <Button Content="{Binding ElementName=savesPage, Path=ButtonResumeAllSavesTextBlock}" Command="{Binding ElementName=savesPage, Path=DataContext.ResumeAllSavesEvent}" />
         </StackPanel>
 
-        <GridView SelectionMode="None" Grid.Row="1" Margin="0,20,0,0" x:Name="GridViewSave" ItemsSource="{Binding Saves}" >
+        <GridView SelectionMode="None" Grid.Row="3" Margin="0,20,0,0" x:Name="GridViewSave" ItemsSource="{Binding Saves}" >
             <GridView.ItemTemplate>
                 <DataTemplate>
                     <Grid Width="450" Background="{ThemeResource SystemAltHighColor}">
                         <StackPanel Margin="20">
 
-                            <TextBlock Text="{Binding Name}" FontWeight="Bold" FontSize="18"/>
+                            <TextBlock TextAlignment="Center" Text="{Binding Name}" FontWeight="Bold" FontSize="18"/>
                             <StackPanel Margin="0,20,0,0">
-                                <TextBlock Text="Source Path :" FontSize="15" FontWeight="Bold"/>
+                                <TextBlock Text="{Binding ElementName=savesPage, Path=SaveSourcePathTextBlock}" FontSize="15" FontWeight="Bold"/>
                                 <TextBlock Text="{Binding SourcePath.LocalPath}"/>
                             </StackPanel>
                             <StackPanel Margin="0,20,0,0">
-                                <TextBlock Text="Target Path :" FontSize="15" FontWeight="Bold"/>
+                                <TextBlock Text="{Binding ElementName=savesPage, Path=SaveTargetPathTextBlock}" FontSize="15" FontWeight="Bold"/>
                                 <TextBlock Text="{Binding TargetPath.LocalPath}"/>
                             </StackPanel>
 
                             <StackPanel Margin="0,20,0,0">
-                                <TextBlock Text="Type de Sauvegarde :" FontSize="15" FontWeight="Bold"/>
+                                <TextBlock Text="{Binding ElementName=savesPage, Path=SaveTypeTextBlock}" FontSize="15" FontWeight="Bold"/>
                                 <TextBlock Text="{Binding Type}"/>
                             </StackPanel>
 
                             <StackPanel Margin="0,20,0,0">
-                                <StackPanel Orientation="Horizontal" Margin="0,20,0,0">
-                                    <TextBlock Text="Progression :" FontSize="15" FontWeight="Bold"/>
-                                    <TextBlock Text="(" FontSize="15" FontWeight="Bold"/>
+                                <StackPanel Orientation="Horizontal">
+                                    <TextBlock Text="{Binding ElementName=savesPage, Path=SaveProgressionTextBlock}" FontSize="15" FontWeight="Bold"/>
+                                    <TextBlock Text=" (" FontSize="15" FontWeight="Bold"/>
                                     <TextBlock Text="{Binding FilesAlreadyDone}" FontSize="15" FontWeight="Bold"/>
                                     <TextBlock Text="/" FontSize="15" FontWeight="Bold"/>
                                     <TextBlock Text="{Binding TotalFilesToCopy}" FontSize="15" FontWeight="Bold"/>
@@ -60,13 +81,30 @@
 
                             
 
-                            <StackPanel Orientation="Horizontal" Margin="0,20,0,0">
-                                <Button Command="{Binding ElementName=savesPage, Path=DataContext.DeleteSaveButtonEvent}"  
+                            <StackPanel Orientation="Horizontal" Margin="0,30,0,0">
+                                <Button Command="{Binding ElementName=savesPage, Path=DataContext.DeleteSaveButtonEvent}"
                                     CommandParameter="{Binding}">
                                     <SymbolIcon Symbol="Delete"/>
+                                    <Button.Resources>
+                                        <ResourceDictionary>
+                                            <ResourceDictionary.ThemeDictionaries>
+                                                <ResourceDictionary x:Key="Light">
+                                                    <SolidColorBrush x:Key="ButtonBackground" Color="#e74c3c"/>
+                                                    <SolidColorBrush x:Key="ButtonBackgroundPointerOver" Color="#ed5c4c"/>
+                                                    <SolidColorBrush x:Key="ButtonForeground" Color="White"/>
+                                                    <SolidColorBrush x:Key="ButtonForegroundPointerOver" Color="White"/>
+                                                </ResourceDictionary>
+                                            </ResourceDictionary.ThemeDictionaries>
+                                        </ResourceDictionary>
+                                    </Button.Resources>
                                 </Button>
-                                <Button Visibility="{Binding State, Converter={StaticResource StateConverter}, ConverterParameter=pause}">
+                                <Button Visibility="{Binding State, Converter={StaticResource StateConverter}, ConverterParameter=pause}" Command="{Binding ElementName=savesPage, Path=DataContext.PauseSaveButtonEvent}"
+                                        CommandParameter="{Binding}">
                                     <SymbolIcon Symbol="Pause"/>
+                                </Button>
+                                <Button Visibility="{Binding State, Converter={StaticResource StateConverter}, ConverterParameter=resume}" Command="{Binding ElementName=savesPage, Path=DataContext.ResumeSaveButtonEvent}"
+                                        CommandParameter="{Binding}">
+                                    <SymbolIcon Symbol="Previous"/>
                                 </Button>
                                 <Button Visibility="{Binding State, Converter={StaticResource StateConverter}, ConverterParameter=play}" Command="{Binding ElementName=savesPage, Path=DataContext.StartSaveButtonEvent}"  
                                     CommandParameter="{Binding}">
