--- a/GuiApplication/Views/Dialogs/CreateSaveDialog.xaml
+++ b/GuiApplication/Views/Dialogs/CreateSaveDialog.xaml
@@ -7,17 +7,17 @@
     mc:Ignorable="d">
 
     <StackPanel>
-        <TextBlock x:Name="ErrorTextBlock" Foreground="Red"/>
-        <TextBox x:Name="SaveName" Margin="0,12,0,0" PlaceholderText="Name" />
+        <InfoBar Name="ErrorInfoBar" />
+        <TextBox Name="SaveName" Margin="0,12,0,0" PlaceholderText="Name" />
         <RelativePanel Margin="0,24,0,0">
-            <Button x:Name="SourcePathButton" Content="Select Source Path" Click="SelectSourcePathAsync" />
-            <TextBlock x:Name="SourcePathText" Margin="10,5,0,0" Text=".\.." RelativePanel.RightOf="SourcePathButton" />
+            <Button Name="SourcePathButton" Content="Select Source Path" Click="SelectSourcePathAsync" />
+            <TextBlock Name="SourcePathText" Margin="10,5,0,0" Text=".\.." RelativePanel.RightOf="SourcePathButton" />
         </RelativePanel>
         <RelativePanel Margin="0,24,0,0">
-            <Button x:Name="TargetPathButton" Content="Select TargetPath Path" Click="SelectTargetPathAsync" />
-            <TextBlock x:Name="TargetPathText" Margin="10,5,0,0" Text=".\EasySave" RelativePanel.RightOf="TargetPathButton" />
+            <Button Name="TargetPathButton" Content="Select TargetPath Path" Click="SelectTargetPathAsync" />
+            <TextBlock Name="TargetPathText" Margin="10,5,0,0" Text=".\EasySave" RelativePanel.RightOf="TargetPathButton" />
         </RelativePanel>
-        <ComboBox x:Name="SaveType" Margin="0,24,0,0" SelectedIndex="0" ItemsSource="{Binding SavesType}"/>
+        <ComboBox Name="SaveType" Margin="0,24,0,0" SelectedIndex="0" ItemsSource="{Binding SavesType}"/>
     </StackPanel>
 
 
