--- a/GuiApplication/Views/Pages/HomePage.xaml
+++ b/GuiApplication/Views/Pages/HomePage.xaml
@@ -1,4 +1,4 @@
-﻿<Page
+﻿<Page Name="homePage"
     x:Class="GuiApplication.Views.Pages.HomePage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -11,20 +11,134 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
-            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
         </Grid.RowDefinitions>
-        <StackPanel Orientation="Horizontal">
-            <TextBlock Name="WelcomeTextBox"/>
+        
+
+        <StackPanel CornerRadius="10" Grid.Row="1" Margin="0,15,0,0" Padding="20" Orientation="Vertical" Background="{ThemeResource SystemAltHighColor}">
+            <StackPanel Orientation="Horizontal">
+                <TextBlock Name="WelcomeTextBox"/>
+            </StackPanel>
+            <StackPanel Grid.Row="1" Margin="0,20,0,0" Orientation="Horizontal">
+                <TextBlock Margin="0,5,0,0" Name="SelectLanguageTextBox"/>
+                <ComboBox Margin="20,0,0,0" Name="LanguageComboBox" ItemsSource="{Binding AllCultureInfo}"/>
+            </StackPanel>
+
+            <StackPanel Grid.Row="2" Margin="0,15,0,0" Orientation="Horizontal">
+                <TextBlock Margin="0,5,0,0" Name="SelectSaveFileTypeTextBox"/>
+                <ComboBox Margin="20,0,0,0" Name="SaveFileTypeComboBox" ItemsSource="{Binding SaveFileTypes}"/>
+            </StackPanel>
         </StackPanel>
 
-        <StackPanel  Grid.Row="1" Margin="0,20,0,0" Orientation="Horizontal">
-            <TextBlock Margin="0,5,0,0" Name="SelectLanguageTextBox"/>
-            <ComboBox Margin="20,0,0,0" Name="LanguageComboBox" ItemsSource="{Binding AllCultureInfo}"/>
-        </StackPanel>
+        <StackPanel CornerRadius="10" Grid.Row="3" Margin="0,15,0,0" Padding="20" Orientation="Vertical" Background="{ThemeResource SystemAltHighColor}">
+            <TextBlock Margin="0,5,0,0" Name="EncryptExtensionsTextBox" FontWeight="SemiBold"/>
+            <Button Margin="0,5,0,0" Name="ButtonAddExtensionTextBlock" Click="AddEncryptExtension_OpenDialog">
+                <Button.Resources>
+                    <ResourceDictionary>
+                        <ResourceDictionary.ThemeDictionaries>
+                            <ResourceDictionary x:Key="Light">
+                                <SolidColorBrush x:Key="ButtonBackground" Color="#27ae60"/>
+                                <SolidColorBrush x:Key="ButtonBackgroundPointerOver" Color="#2bb865"/>
+                                <SolidColorBrush x:Key="ButtonForeground" Color="White"/>
+                                <SolidColorBrush x:Key="ButtonForegroundPointerOver" Color="White"/>
+                            </ResourceDictionary>
+                        </ResourceDictionary.ThemeDictionaries>
+                    </ResourceDictionary>
+                </Button.Resources>
 
-        <StackPanel  Grid.Row="2" Margin="0,15,0,0" Orientation="Horizontal">
-            <TextBlock Margin="0,5,0,0" Name="SelectSaveFileTypeTextBox"/>
-            <ComboBox Margin="20,0,0,0" Name="SaveFileTypeComboBox" ItemsSource="{Binding SaveFileTypes}"/>
+            </Button>
+            <StackPanel Margin="0,15,0,0" Orientation="Horizontal">
+                <GridView SelectionMode="None" x:Name="GridViewEncryptExtensions" ItemsSource="{Binding EncryptExtensions}" >
+                    <GridView.ItemTemplate>
+                        <DataTemplate>
+                            <Grid CornerRadius="5" Background="{ThemeResource SystemAccentColor}">
+                                <StackPanel Orientation="Horizontal" Padding="10">
+                                    <TextBlock TextAlignment="Center" ToolTipService.ToolTip="{Binding}" Margin="0,3,10,0" Width="96" Text="{Binding}" Foreground="White" FontWeight="Bold"/>
+                                    <Button Command="{Binding ElementName=homePage, Path=DataContext.RemoveEncryptExtensionButtonEvent}"
+                                    CommandParameter="{Binding}">
+                                        <Viewbox MaxHeight="15" MaxWidth="15">
+                                            <SymbolIcon Symbol="Delete"/>
+                                        </Viewbox>
+                                        <Button.Resources>
+                                            <ResourceDictionary>
+                                                <ResourceDictionary.ThemeDictionaries>
+                                                    <ResourceDictionary x:Key="Light">
+                                                        <SolidColorBrush x:Key="ButtonBackground" Color="#e74c3c"/>
+                                                        <SolidColorBrush x:Key="ButtonBackgroundPointerOver" Color="#ed5c4c"/>
+                                                        <SolidColorBrush x:Key="ButtonForeground" Color="White"/>
+                                                        <SolidColorBrush x:Key="ButtonForegroundPointerOver" Color="White"/>
+                                                    </ResourceDictionary>
+                                                </ResourceDictionary.ThemeDictionaries>
+                                            </ResourceDictionary>
+                                        </Button.Resources>
+                                    </Button>
+                                </StackPanel>
+                            </Grid>
+                        </DataTemplate>
+                    </GridView.ItemTemplate>
+                    <GridView.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <ItemsWrapGrid MaximumRowsOrColumns="7" Orientation="Horizontal"/>
+                        </ItemsPanelTemplate>
+                    </GridView.ItemsPanel>
+                </GridView>
+            </StackPanel>
+        </StackPanel>
+        <StackPanel CornerRadius="10" Grid.Row="4" Margin="0,15,0,0" Padding="20" Orientation="Vertical" Background="{ThemeResource SystemAltHighColor}">
+            <TextBlock Margin="0,5,0,0" Name="PriorityFilesTextBox" FontWeight="SemiBold"/>
+            <Button Margin="0,5,0,0" Name="ButtonAddFileTextBlock" Click="AddPriorityFile_OpenDialog">
+                <Button.Resources>
+                    <ResourceDictionary>
+                        <ResourceDictionary.ThemeDictionaries>
+                            <ResourceDictionary x:Key="Light">
+                                <SolidColorBrush x:Key="ButtonBackground" Color="#27ae60"/>
+                                <SolidColorBrush x:Key="ButtonBackgroundPointerOver" Color="#2bb865"/>
+                                <SolidColorBrush x:Key="ButtonForeground" Color="White"/>
+                                <SolidColorBrush x:Key="ButtonForegroundPointerOver" Color="White"/>
+                            </ResourceDictionary>
+                        </ResourceDictionary.ThemeDictionaries>
+                    </ResourceDictionary>
+                </Button.Resources>
+
+            </Button>
+            <StackPanel Margin="0,15,0,0" Orientation="Horizontal">
+                <GridView SelectionMode="None" x:Name="GridViewPriorityFile" ItemsSource="{Binding PriorityFiles}" >
+                    <GridView.ItemTemplate>
+                        <DataTemplate>
+                            <Grid CornerRadius="5" Background="{ThemeResource SystemAccentColor}">
+                                <StackPanel Orientation="Horizontal" Padding="10">
+                                    <TextBlock TextAlignment="Center" ToolTipService.ToolTip="{Binding}" Margin="0,3,10,0" Width="96" Text="{Binding}" Foreground="White" FontWeight="Bold"/>
+                                    <Button Command="{Binding ElementName=homePage, Path=DataContext.RemovePriorityFileButtonEvent}"
+                                    CommandParameter="{Binding}">
+                                        <Viewbox MaxHeight="15" MaxWidth="15">
+                                            <SymbolIcon Symbol="Delete"/>
+                                        </Viewbox>
+                                        <Button.Resources>
+                                            <ResourceDictionary>
+                                                <ResourceDictionary.ThemeDictionaries>
+                                                    <ResourceDictionary x:Key="Light">
+                                                        <SolidColorBrush x:Key="ButtonBackground" Color="#e74c3c"/>
+                                                        <SolidColorBrush x:Key="ButtonBackgroundPointerOver" Color="#ed5c4c"/>
+                                                        <SolidColorBrush x:Key="ButtonForeground" Color="White"/>
+                                                        <SolidColorBrush x:Key="ButtonForegroundPointerOver" Color="White"/>
+                                                    </ResourceDictionary>
+                                                </ResourceDictionary.ThemeDictionaries>
+                                            </ResourceDictionary>
+                                        </Button.Resources>
+                                    </Button>
+                                </StackPanel>
+                            </Grid>
+                        </DataTemplate>
+                    </GridView.ItemTemplate>
+                    <GridView.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <ItemsWrapGrid MaximumRowsOrColumns="7" Orientation="Horizontal"/>
+                        </ItemsPanelTemplate>
+                    </GridView.ItemsPanel>
+                </GridView>
+            </StackPanel>
         </StackPanel>
     </Grid>
 
