--- a/GuiApplication/Views/Pages/HomePage.xaml
+++ b/GuiApplication/Views/Pages/HomePage.xaml
@@ -38,6 +38,11 @@
                         <TextBlock Margin="0,5,0,0" Name="SelectLogsFileTypeTextBox"/>
                         <ComboBox Margin="20,0,0,0" Name="LogsFileTypeComboBox" ItemsSource="{Binding FileTypes}"/>
                     </StackPanel>
+
+                    <StackPanel Grid.Row="2" Margin="0,15,0,0" Orientation="Horizontal">
+                        <TextBlock Margin="0,5,0,0" Name="SelectMaxFileSizeTextBox"/>
+                        <NumberBox Margin="20,0,0,0" SpinButtonPlacementMode="Inline" Minimum="1" Maximum="999999999" SmallChange="10" ValueChanged="MaxFileSizeNumberBox_ValueChanged" Value="{Binding MaxFileSize, Mode=TwoWay}" />
+                    </StackPanel>
                 </StackPanel>
 
                 <StackPanel Grid.Column="1" Orientation="Vertical">
